# auto_drive_ws

./: .gitmodules  readme.md
auto_drive/src/f7_sim/: CMakeLists.txt  README.md  package.xml
auto_drive/src/f7_sim/config/: holonomic_test.yaml
auto_drive/src/f7_sim/include/f7_sim/: f7_sim.hpp  f7_sim_node.hpp  noisy_odom.hpp  util_functions.hpp
auto_drive/src/f7_sim/include/local_path/: f7_sim_node.hpp  noisy_odom_node.hpp  util_functions.hpp
auto_drive/src/f7_sim/launch/: launch_test.py  position_move_test.launch.py  position_move_test.py  position_move_test_trash.launch.py
auto_drive/src/f7_sim/models/HolonomicUrdf/: model.xacro
auto_drive/src/f7_sim/params/: params.yaml
auto_drive/src/f7_sim/src/: f7_sim.cpp  f7_sim_node.cpp  local_path_node.cpp  noisy_odom.cpp  pos_certain_node.cpp  util_function.cpp
auto_drive/src/f7_sim/src/holonomic_plugin/: holonomic_plugin.cpp
auto_drive/src/f7_sim/src/local_path/: f7_sim.cpp  f7_sim_node.cpp  local_path_node.cpp  noisy_odom_node.cpp  pos_certain_node.cpp  util_function.cpp
auto_drive/src/global_path/: CMakeLists.txt  package.xml  readme.md
auto_drive/src/global_path/config/: path_visualization.rviz
auto_drive/src/global_path/include/global_path/: global_planning.hpp  planner_defines.hpp
auto_drive/src/global_path/launch/: global_path_test.launch.py
auto_drive/src/global_path/params/: params.yaml
auto_drive/src/global_path/path/: global_path.csv
auto_drive/src/global_path/src/: global_path_node.cpp  global_planning.cpp  main.cpp  path_visualize_node.cpp
auto_drive/src/local_path/: CMakeLists.txt  package.xml  readme.md
auto_drive/src/local_path/config/: corner_detect_test.rviz  local_path_test.rviz  static_local_path_test.rviz
auto_drive/src/local_path/include/local_path/: local_planner.hpp  local_planning.hpp  path_publisher.hpp
auto_drive/src/local_path/include/util/: pcp.hpp  rviz_util.h  rviz_util.hpp
auto_drive/src/local_path/launch/: corner_detect_test.launch.py  global_path_test.launch.py  local_path_test.launch.py  static_local_path_test.launch.py
auto_drive/src/local_path/params/: params.yaml
auto_drive/src/local_path/path/: global_path.csv  local_path.csv
auto_drive/src/local_path/src/: corner_detect_node.cpp  local_path_node.cpp  local_planner.cpp  local_planning.cpp  path_publish.cpp  path_publisher.cpp  static_local_planner_node.cpp  util_functions.cpp
auto_drive/src/local_path/src/util/: pcp.cpp
auto_drive/src/localization_dev/: CMakeLists.txt  package.xml  readme.md
auto_drive/src/localization_dev/config/: amcl.rviz  localization_test.rviz  localization_test.yaml  pc_mapping.rviz  pc_mapping.yaml
auto_drive/src/localization_dev/include/localization_dev/: local_accuracy.hpp  localization.hpp  localization_test_node.hpp  noisy_odom.hpp
auto_drive/src/localization_dev/launch/: localization_single_test.launch.py  localization_test.launch.py  nav2_amcl.launch.py  pc_mapping.launch.py  pc_mapping_test.launch.py
auto_drive/src/localization_dev/map/: 1716881195.pcd  1716881206.pcd  1716881208.pcd  1717170545.pcd  map.pcd  map_old.pcd
auto_drive/src/localization_dev/param/: params.yaml
auto_drive/src/localization_dev/params/: params.yaml
auto_drive/src/localization_dev/src/: local_accuracy.cpp  localization.cpp  localization_test_node.cpp  noisy_odom.cpp
auto_drive/src/localization_dev/src/localization_test/: local_accuracy.cpp  localization.cpp  localization_test_node.cpp  map_publisher.cpp  nav2_accuracy.cpp  nav2_accuracy_node.cpp  nav2_amcl_node.cpp  noisy_odom.cpp  odom_modifier.cpp
auto_drive/src/localization_dev/src/map_generation/: CMakeLists.txt  readme.md
auto_drive/src/localization_dev/src/pc_mapping/: dammy_scan_node.cpp  odom_tf.cpp  odom_tf_node.cpp  pc2_filter.cpp  pc2_mapping.cpp  pc2octmap.cpp  pc_mapping_node.cpp  pc_test_node.cpp  pcl_test_node.cpp  save_pc.cpp  scan2pc2.cpp  scan2pc2_node.cpp
auto_drive/src/model_test/: CMakeLists.txt  package.xml  readme.md
auto_drive/src/model_test/launch/: display.launch.py  holonomic_test.launch.py
auto_drive/src/model_test/models/CasterRobo/: model.config  model.sdf
auto_drive/src/model_test/models/HolonomicRobo/: model.sdf
auto_drive/src/model_test/models/SingleSteerRobo/: model.config  model.sdf
auto_drive/src/model_test/src/holonomic_panel/: HolonomicPanel.cpp  HolonomicPanel.hpp  HolonomicPanel.qml  HolonomicPanel.qrc
auto_drive/src/model_test/src/holonomic_test/: holonomic_test.cpp  holonomic_test.hpp
auto_drive/src/model_test/src/rotate_axis/: rotate_axis.cpp  rotate_axis.hpp
auto_drive/src/model_test/src/switch_panel/: SwitchPanel.cpp  SwitchPanel.hpp  SwitchPanel.qml
auto_drive/src/model_test/worlds/: gui_example1.sdf  holonomic_test.sdf  plugin_test.sdf
auto_drive/src/nav2_localization/: CMakeLists.txt  package.xml
auto_drive/src/nav2_localization/config/: pc_mapping.rviz
auto_drive/src/nav2_localization/include/nav2_localization/: nav2_accuracy.hpp  noisy_odom.hpp
auto_drive/src/nav2_localization/launch/: nav2_amcl.launch.py
auto_drive/src/nav2_localization/src/: nav2_accuracy.cpp  nav2_amcl_node.cpp  noisy_odom.cpp
auto_drive/src/path_pursuit/: CMakeLists.txt  package.xml
auto_drive/src/path_pursuit/config/: local_path_test.rviz  localization_test.yaml
auto_drive/src/path_pursuit/include/path_pursuit/: ex_pure_pursuit.hpp  path_pursuit.hpp  pid.hpp  pure_pursuit.hpp  simple_pursuit.hpp
auto_drive/src/path_pursuit/launch/: path_pursuit_test.launch.py  pid_test.launch.py
auto_drive/src/path_pursuit/params/: params.yaml
auto_drive/src/path_pursuit/src/: ex_pure_pursuit.cpp  path_pursuit.cpp  path_pursuit_node.cpp  pid_test_node.cpp  pure_pursuit.cpp  simple_pursuit.cpp
auto_drive/src/pathplanning_cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
auto_drive/src/pathplanning_cpp/pathplanner_cpp/: CMakeLists.txt
auto_drive/src/pathplanning_cpp/pathplanner_cpp/inc/: planner_defines.hpp  planning.hpp  spline.hpp  spline_utils.hpp  util_functions.hpp
auto_drive/src/pcp_util/: CMakeLists.txt  package.xml
auto_drive/src/pcp_util/src/: pcp_util.cpp
(+167 files in other folders)
